--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -53,7 +53,7 @@
         <ImageView
             android:layout_weight="1"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_similar"
+            android:src="@drawable/ic_menu"
             android:paddingTop="@dimen/x15"
             android:paddingBottom="@dimen/x15"
             android:layout_width="match_parent"
